{
    "name": "InputControler",
    "maps": [
        {
            "name": "Jugador",
            "id": "dff3a509-bfff-4f54-a2a3-8057c156d575",
            "actions": [
                {
                    "name": "Atacar",
                    "type": "Button",
                    "id": "a4d93eab-15f8-494b-967d-e6b67c991abe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "9db0b795-d70f-4922-8658-4ea12e7945d5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Habilidad1",
                    "type": "Button",
                    "id": "0660f887-217b-49b5-8dba-138b6cb90692",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Habilidad2",
                    "type": "Button",
                    "id": "2179bafb-a7e8-43ab-b39f-e8f38f646884",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Habilidad3",
                    "type": "Button",
                    "id": "4086f20b-0ff5-4f55-bcea-607c9da86379",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Habilidad4",
                    "type": "Button",
                    "id": "916355de-f950-47c2-9064-e36e6297740a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "225e5332-d3e8-4aaf-bbe1-747451ecae5a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard and mouse",
                    "action": "Atacar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "2f1cda3b-13cd-42ac-a098-14c446858477",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "39406c00-fb26-427a-a4f4-317623a9c9fd",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard and mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2500acd6-b97c-4aa3-8e1a-aac6b580b175",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard and mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f2001d28-21a9-46cd-a5e9-d7897f536188",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard and mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "92f48d24-5942-4c2a-9c8e-e9bc02c4702e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard and mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Movil",
                    "id": "ef6db4de-b0b2-449b-a5ae-9da92fd6062e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e904a134-10ab-478c-9587-daad7b1c9119",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3b3c5aba-7a12-47b2-9f06-d22d75b66660",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9b3e9fbc-f093-4a54-943d-faf19ea3c591",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8ceb6835-4886-4cd5-87bf-f407b6584fe4",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ac76bbb4-64f4-4bb6-abf9-7ae76ecc1acd",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard and mouse",
                    "action": "Habilidad1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5bacb882-4d41-48ba-9cb9-45ea2c1f8003",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard and mouse",
                    "action": "Habilidad2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c62dc70e-ee8f-470d-9ce7-b87ee803e902",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard and mouse",
                    "action": "Habilidad3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "737a2b04-c002-4aa0-99d4-713d77939250",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard and mouse",
                    "action": "Habilidad4",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Cartas",
            "id": "d45b7e8c-4058-4d5b-b2f3-ff1bf250f8cc",
            "actions": [
                {
                    "name": "Selection",
                    "type": "Button",
                    "id": "e7b26a5e-e6f8-42f5-9467-b4907869b8b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "EnterSelection",
                    "type": "Button",
                    "id": "ade597e0-007f-4d9c-8e83-8c7d9695c7e9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "NuevaCarta",
                    "type": "Button",
                    "id": "a7800c16-b3a1-4a6d-837d-52a9a34caaad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SacarCartas",
                    "type": "Button",
                    "id": "e1403435-90b3-4875-9682-ba86743463a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6e76c20e-a7d9-4928-aded-74ac2bec6344",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard and mouse",
                    "action": "SacarCartas",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fce220d1-5f7e-4336-8a01-c33b6783d009",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard and mouse",
                    "action": "NuevaCarta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d801b3ee-7d00-4e53-b55e-ac654f1d8d19",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard and mouse",
                    "action": "EnterSelection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "5ea9f418-0831-4ed6-9185-a18ac772b6d9",
                    "path": "1DAxis(minValue=0)",
                    "interactions": "",
                    "processors": "Clamp(max=1)",
                    "groups": "",
                    "action": "Selection",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "9fdbd5bd-30bc-4628-9077-383cee4b1404",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard and mouse",
                    "action": "Selection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "bbea5f70-caba-4e37-bad9-7eeb450ffbe0",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard and mouse",
                    "action": "Selection",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "keyboard and mouse",
            "bindingGroup": "keyboard and mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}